Update code and added employee.php

--- a/admin/assets/css/admin_template_switch.css
+++ b/admin/assets/css/admin_template_switch.css
@@ -94,13 +94,32 @@ li.nav-item:hover {
     padding: auto 2rem;
 }
 
+#cards {
+    height: auto;
+}
+
+@media (min-width: 768px) {
+    #cards {
+        height: auto;
+        width: 20.5rem;
+    }
+}
+
+@media (max-width: 414px) {
+    #cards {
+        height: auto;
+        width: 20rem;
+    }
+}
+
 #logo-display {
     display: flex;
     align-items: center;
     justify-content: flex-end;
     transition: transform 0.3s ease-in-out; /* Add smooth transition */
     transform-origin: right center; /* Set transform origin to the right */
-    font-size: 90px;
+    font-size: 75px;
+    margin-right: 15px;
     /* color: rgba(0, 0, 0, 0.250); */
 }
 
